# hackathon

./: .env  building_characteristics.xlsx  main.py  test.py  ~$Сетка анализа здания (1).xlsx  Сетка анализа здания (1).xlsx
excel/: building_characteristics.xlsx  main.py  pyproject.toml
